--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,12 +30,87 @@
 	transform: translate(0%, -50%);
 }
 
+#MapColumn
+{
+	width: 992px;
+}
+
 #MapContainer
 {
-	z-index: 1;
 	width: 990px;
 	height: 628px;
+	border: 1px solid black;
 	overflow: hidden;
+}
+
+#TimelineContainer
+{
+	position: relative;
+	box-sizing: border-box;
+	width: 100%;
+	overflow: hidden;
+	border: 1px solid black;
+	background-color: #333;
+}
+
+#Timeline
+{
+	width: 100%;
+	margin: 0 0 0 541px;
+	padding: 0;
+	list-style-type: none;
+	white-space: nowrap;
+	font-size: 0;
+}
+
+li.TimeLineDateBox
+{
+	display: inline-block;
+	box-sizing: border-box;
+	width: 90px;
+	height: 90px;
+	border: 1px solid black;
+	text-align: center;
+	padding-top: 30px;
+	font-size: 14px;
+	background-color: #7777be;
+}
+
+#TimelineFrame
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+
+.TimelineCover
+{
+	position: absolute;
+	height: 100%;
+	background-color: #ffffffaa;
+	width: 450px;
+	top: 0;
+}
+
+#TimelineCoverLeft
+{
+	left: 0;
+	border-right: 2px solid black;
+}
+#TimelineCoverRight
+{
+	left: 540px;
+	border-left: 2px solid black;
+}
+
+
+#AnimationSlider
+{
+	width: 100%;
+	height: 25px;
 }
 
 #SvgObject
