--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,14 @@
+h3
+{
+	text-align: center;
+}
+
+h3, h4
+{
+	margin-top: 3px;
+	margin-bottom: 3px;
+}
+
 #Everything
 {
 	z-index: 1;
@@ -30,9 +41,81 @@
 	transform: translate(0%, -50%);
 }
 
+#ColumnsContainer
+{
+	position: relative;
+}
+
 #MapColumn
 {
+	position: absolute;
+	left: 0;
+	top: 0;
 	width: 992px;
+}
+
+#InformationPanel
+{
+	position: absolute;
+	left: 992px;
+	top: 0;
+	box-sizing: border-box;
+	width: 350px;
+	height: 722px;
+	border: 1px solid green;
+	padding: 8px;
+	background-color: #d4d8db;
+	overflow-y: auto;
+}
+
+.InformationCard
+{
+	border: 1px solid #e1e4e8;
+	border-radius: 6px;
+	box-shadow: 0 1px 1px rgba(27,31,35,.1);
+	background-color: white;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 6px;
+	padding-left: 3px;
+	padding-right: 3px;
+	width: 315px;
+	position: absolute;
+	left: 8px;
+}
+
+.TitleCard
+{
+	background-color: #7777be;
+}
+
+.CountyInfoCardTable
+{
+	width: 100%;
+	font-family: sans-serif;
+	font-size: 12px;
+	text-align: right;
+	border-collapse: collapse;
+}
+
+.CountyInfoCardTable thead
+{
+	font-size: 11px;
+}
+
+.InfoColChange1Day
+{
+	background-color: #aaaa00ff;
+}
+
+.InfoColChange3Day
+{
+	background-color: #aaaa00aa;
+}
+
+.InfoColChange7Day
+{
+	background-color: #aaaa0055;
 }
 
 #MapContainer
