Added a bunch of styling and a spot for config control.
Issue: #2, #8, #13

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,9 @@
+body
+{
+	background-color: #1e1e1e;
+	color: #d7ba7d;
+}
+
 h3
 {
 	text-align: center;
@@ -7,6 +13,15 @@ h3, h4
 {
 	margin-top: 3px;
 	margin-bottom: 3px;
+}
+
+#ConfigPhrase
+{
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	font-weight: normal;
+	color: blue;
+	cursor: pointer;
 }
 
 #Everything
@@ -28,6 +43,7 @@ h3, h4
 	height: 100%;
 	z-index: 1000;
 	background-color: #aaaaaadd;
+	color: #1e1e1e;
 	text-align: center;
 	font-size: 28pt;
 }
@@ -62,7 +78,7 @@ h3, h4
 	box-sizing: border-box;
 	width: 350px;
 	height: 722px;
-	border: 1px solid green;
+	border: 1px solid #74818b;
 	padding: 8px;
 	background-color: #d4d8db;
 	overflow-y: auto;
@@ -74,6 +90,7 @@ h3, h4
 	border-radius: 6px;
 	box-shadow: 0 1px 1px rgba(27,31,35,.1);
 	background-color: white;
+	color: #555555;
 	box-sizing: border-box;
 	margin-top: 6px;
 	margin-bottom: 6px;
@@ -103,26 +120,11 @@ h3, h4
 	font-size: 11px;
 }
 
-.InfoColChange1Day
-{
-	background-color: #aaaa00ff;
-}
-
-.InfoColChange3Day
-{
-	background-color: #aaaa00aa;
-}
-
-.InfoColChange7Day
-{
-	background-color: #aaaa0055;
-}
-
 #MapContainer
 {
 	width: 990px;
 	height: 628px;
-	border: 1px solid black;
+	border: 1px solid #1e1e1e;
 	overflow: hidden;
 }
 
@@ -132,7 +134,7 @@ h3, h4
 	box-sizing: border-box;
 	width: 100%;
 	overflow: hidden;
-	border: 1px solid black;
+	border: 1px solid #1e1e1e;
 	background-color: #333;
 }
 
@@ -144,6 +146,7 @@ h3, h4
 	list-style-type: none;
 	white-space: nowrap;
 	font-size: 0;
+	color: #1e1e1e;
 }
 
 li.TimeLineDateBox
@@ -154,8 +157,9 @@ li.TimeLineDateBox
 	height: 90px;
 	border: 1px solid black;
 	text-align: center;
-	padding-top: 30px;
-	font-size: 14px;
+	padding-top: 24px;
+	font-size: 16px;
+	line-height: 20px;
 	background-color: #7777be;
 }
 
@@ -188,7 +192,6 @@ li.TimeLineDateBox
 	left: 540px;
 	border-left: 2px solid black;
 }
-
 
 #AnimationSlider
 {
