Reports can now be run on all fact types and view types.
Closes: #9

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@ h3, h4
 	text-decoration: underline;
 	text-decoration-style: dotted;
 	font-weight: normal;
-	color: blue;
+	color: #7d96d7;
 	cursor: pointer;
 }
 
