--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,14 +35,25 @@ h3, h4
 	display: none;
 }
 
+#ConfigurationModalBackground
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 998;
+	background-color: #aaaaaadd;
+}
+
 #ConfigurationBox
 {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	width: 400px;
-	height: 300px;
-	margin: -150px 0 0 -200px;
+	height: 322px;
+	margin: -161px 0 0 -200px;
 	padding: 12px;
 	border: none;
 	border-radius: 6px;
@@ -54,6 +65,12 @@ h3, h4
 {
 	margin-top: 14px;
 	color: #efefef;
+}
+
+#ConfigurationButtons
+{
+	margin-top: 14px;
+	text-align: center;
 }
 
 #WaitBox
