--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -174,6 +174,7 @@ h3, h4
 
 #MapContainer
 {
+	position: relative;
 	width: 990px;
 	height: 628px;
 	border: 1px solid #1e1e1e;
@@ -261,7 +262,6 @@ li.TimeLineDateBox
 
 #RangeKeyPanel
 {
-	zposition: relative;
 	margin-top: 10px;
 	box-sizing: border-box;
 	width: 100%;
@@ -283,8 +283,22 @@ div.ColorKey
 
 #SvgObject
 {
+	position: absolute;
+	left: 0;
+	top: 0;
 	width: 990px;
 	height: 628px;
-	margin-left: 0px;
-	margin-top: 0px;
+	z-index: 2;
+}
+
+#DragMap
+{
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 990px;
+	height: 628px;
+	z-index: 1;
+	opacity: 0.5;
 }
