Map can be zoomed with buttons or scroll wheel.
Known problem: panning image no longer works.

Issue: #4, #2

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -302,3 +302,23 @@ div.ColorKey
 	z-index: 1;
 	opacity: 0.5;
 }
+
+#ZoomButtonContainer
+{
+	position: absolute;
+	left: 900px;
+	top: 595px;
+	z-index: 5;
+}
+
+#BtnZoomIn, #BtnZoomOut, #BtnZoomFull
+{
+	width: 24px;
+	height: 24px;
+	font-size: 13.33px;
+}
+
+#BtnZoomFull
+{
+	padding-left: 4px;
+}
