--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -133,6 +133,7 @@ h3, h4
 
 .InformationCard
 {
+	position: relative;
 	border: 1px solid #e1e4e8;
 	border-radius: 6px;
 	box-shadow: 0 1px 1px rgba(27,31,35,.1);
@@ -145,6 +146,19 @@ h3, h4
 	padding-right: 3px;
 	width: 315px;
 	left: 8px;
+}
+
+.InfoCardRemovalButton
+{
+	position: absolute;
+	top: 2px;
+	left: 290px;
+	font-size: 12px;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .TitleCard
