--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,8 +51,8 @@ h3, h4
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	width: 400px;
-	height: 322px;
+	width: 600px;
+	height: auto;
 	margin: -161px 0 0 -200px;
 	padding: 12px;
 	border: none;
@@ -151,14 +151,18 @@ h3, h4
 .InfoCardRemovalButton
 {
 	position: absolute;
-	top: 2px;
-	left: 290px;
+	top: 4px;
+	left: 293px;
 	font-size: 12px;
-	width: 20px;
-	height: 20px;
+	width: 16px;
+	height: 16px;
 	text-align: center;
 	padding-left: 0;
 	padding-right: 0;
+	display: block;
+	box-sizing: border-box;
+	border-width: 0px;
+	border-radius: 2px;
 }
 
 .TitleCard
