--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,6 +73,12 @@ h3, h4
 	text-align: center;
 }
 
+#GrowthRangeChoiceCell
+{
+	border-left: 1px solid white;
+	padding-left: 5px;
+}
+
 #WaitBox
 {
 	position: absolute;
