--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,10 +73,20 @@ h3, h4
 	text-align: center;
 }
 
+#GrowthAbsoluteChoiceCell
+{
+	border-top: 1px solid white;
+}
+
 #GrowthRangeChoiceCell
 {
 	border-left: 1px solid white;
 	padding-left: 5px;
+}
+
+#GrowthProportionalChoiceCell
+{
+	border-bottom: 1px solid white;
 }
 
 #WaitBox
