--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -130,7 +130,7 @@ h3, h4
 	position: absolute;
 	left: 992px;
 	top: 0;
-	width: 350px;
+	width: 400px;
 }
 
 #InformationPanel
@@ -139,7 +139,7 @@ h3, h4
 	left: 0;
 	top: 80px;
 	box-sizing: border-box;
-	width: 350px;
+	width: 400px;
 	height: 722px;
 	border: 1px solid #74818b;
 	padding: 8px;
@@ -160,7 +160,7 @@ h3, h4
 	margin-bottom: 6px;
 	padding-left: 3px;
 	padding-right: 3px;
-	width: 315px;
+	width: 365px;
 	left: 8px;
 }
 
@@ -168,7 +168,7 @@ h3, h4
 {
 	position: absolute;
 	top: 4px;
-	left: 293px;
+	left: 343px;
 	font-size: 12px;
 	width: 16px;
 	height: 16px;
@@ -204,6 +204,11 @@ h3, h4
 .CountyInfoCardTable thead
 {
 	font-size: 11px;
+}
+
+.DeathRow
+{
+	border-top: 25px solid white;
 }
 
 #MapContainer
