--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -228,6 +228,13 @@ h3, h4
 	border-top: 25px solid white;
 }
 
+td.CurrentFact
+{
+	font-weight: bold;
+	font-size: larger;
+}
+
+
 #MapContainer
 {
 	position: relative;
