Info cards and map counties both show mouseover highlighting.
Issue: #3, #2, #7

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -164,6 +164,11 @@ h3, h4
 	left: 8px;
 }
 
+.InformationCard.Hovered
+{
+	border: 1px solid black;
+}
+
 .InfoCardLeftMainTitle
 {
 	width: 40px;
@@ -233,7 +238,6 @@ td.CurrentFact
 	font-weight: bold;
 	font-size: larger;
 }
-
 
 #MapContainer
 {
