--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,10 +61,15 @@ h3, h4
 	z-index: 999;
 }
 
-.ConfigurationRadioGroup
+.ConfigurationControlSection
 {
 	margin-top: 14px;
 	color: #efefef;
+}
+
+.NonRadioQuestion
+{
+	margin-left: 25px;
 }
 
 #ConfigurationButtons
