--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,7 +53,7 @@ h3, h4
 	top: 50%;
 	width: 600px;
 	height: auto;
-	margin: -161px 0 0 -200px;
+	margin: -227px 0 0 -300px;
 	padding: 12px;
 	border: none;
 	border-radius: 6px;
@@ -65,6 +65,12 @@ h3, h4
 {
 	margin-top: 14px;
 	color: #efefef;
+}
+
+.ConfigurationErrorSection
+{
+	font-weight: bold;
+	color: #820000;
 }
 
 .NonRadioQuestion
