--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -237,6 +237,7 @@ h3, h4
 .CountyInfoCardTable thead th
 {
 	text-align: center;
+	text-decoration: underline;
 }
 
 .DeathRow
@@ -355,7 +356,7 @@ li.TimeLineDateBox
 
 div.ColorKey
 {
-	width: 200px;
+	width: 135px;
 	height: 20px;
 }
 
