--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,15 @@ h3, h4
 	cursor: pointer;
 }
 
+#ColorationConfigLink
+{
+	text-decoration: underline;
+	text-decoration-style: dotted;
+	font-weight: normal;
+	color: #7d96d7;
+	cursor: pointer;
+}
+
 #Everything
 {
 	z-index: 1;
@@ -34,6 +43,33 @@ h3, h4
 {
 	display: none;
 }
+
+#ColorationConfigBackground
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 998;
+	background-color: #aaaaaadd;
+}
+
+#ColorationConfigBox
+{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 600px;
+	height: auto;
+	margin: -227px 0 0 -300px;
+	padding: 12px;
+	border: none;
+	border-radius: 6px;
+	background-color: #808080;
+	z-index: 999;	
+}
+
 
 #ConfigurationModalBackground
 {
@@ -400,10 +436,18 @@ li.TimeLineDateBox
 	height: 25px;
 }
 
-#ControlButtonsContainer
+#ControlButtonsOuterContainer
 {
-	text-align: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
+
+#ColorationControlContainer, #ControlButtonSpacer
+{	width: 200px;	}
+
+#ControlButtonsContainer
+{	text-align: center;	}
 
 #RangeKeyPanel
 {
