--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,7 +43,7 @@ h3, h4
 	width: 100%;
 	height: 100%;
 	z-index: 998;
-	background-color: #aaaaaadd;
+	background-color: rgba(170,170,170,0.87);
 }
 
 #ConfigurationBox
@@ -107,7 +107,7 @@ h3, h4
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #aaaaaadd;
+	background-color: rgba(170,170,170,0.87);
 	color: #1e1e1e;
 }
 
@@ -377,7 +377,7 @@ li.TimeLineDateBox
 {
 	position: absolute;
 	height: 100%;
-	background-color: #ffffff77;
+	background-color: rgba(255,255,255,0.47);
 	width: 450px;
 	top: 0;
 }
