--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,6 +73,19 @@ h3, h4
 			border: 1px solid #1e1e1e;
 			overflow: hidden;
 		}
+
+			#CenterDot
+			{
+				width: 4px;
+				height: 4px;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-left: -2px;
+				margin-top: -2px;
+				z-index: 1000;
+				background-color: orange;
+			}
 		
 			#SvgObject
 			{
