County coloration is now shown on info cards.
Closes: #34

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -315,6 +315,13 @@ h3, h4
 				border: 1px solid black;
 			}
 
+				.InfoCardColorBlock
+				{
+					display: inline-block;
+					width: 2em;
+					height: 1em;
+				}
+
 				.InfoCardLeftMainTitle
 				{
 					width: 40px;
